syntax = "proto3";

option csharp_namespace = "BookshelfService";
import "google/protobuf/any.proto";
package BookshelfService;

// The bookshelf service definition.
service BookService {
  // Get full list of books
  rpc GetAllBooks (AllBooksRequest) returns (stream AllBooksReply);
  // Save a Book
  rpc Save (NewBookRequest) returns (NewBookReply);
  //
  rpc Send(SendRequest) returns (SendReply);
}

message SendRequest
{
  google.protobuf.Any Content = 1;
}

message SendReply
{
  google.protobuf.Any Content = 1;
}

// The request message containing the book's title and description.
message AllBooksRequest {
  int32 itemsPerPage = 1;
}

// The request message containing the book's title and description.
message AllBooksReply {
  repeated Book Books = 1;
}

message Book {
  string title = 1;
  string description = 2;
}

// The request message containing the book's title and description.
message NewBookRequest {
  string title = 1;
  string description = 2;
}

// The response message containing the book id.
message NewBookReply {
  string id = 1;
}